--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
     <title>Greeting Card</title>
 </head>
 <body>
-    <header>
-        <img src="img/dusseldorf-1.png" alt="Düsseldorf Skyline">
-    
-        <section class="flex-container">
-                <!-- <div><span style="font-size: 0.8em; color: white; float: right; padding: 10px;">
+    <section>
+        <div  class="card">
+            <!-- <div>
+                <span style="font-size: 0.8em; color: white; float: right; padding: 10px;">
                         <i class="fab fa-linkedin-in"></i>
-                    </span> -->
-                </div>
-                <div>
-                    <img src="img/img2.jpg" alt="Enrica Berti"><h1>Enrica Berti<hr></h1>
-                </div>
-                <div><p>"Ich danke Ihnen für die Unterstützung, um mein Wissen zu erweitern."</p></div>
-        </section>
-    </header>
+                </span>
+            </div> -->
+            <div><img src="img/img2.jpg" alt="Enrica Berti"><h1>Enrica Berti<hr></h1></div>    
+            <div><p>"Ich danke Ihnen für die Unterstützung, um mein Wissen zu erweitern."</p></div>
+        </div>
+    </section>
+    <footer>© DCI 2018 | Orientation Course</footer>
 </body>
 </html>
