Icon Social Media

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <section>
         <div  class="card">
-            <!-- <div>
-                <span style="font-size: 0.8em; color: white; float: right; padding: 10px;">
-                        <i class="fab fa-linkedin-in"></i>
+             <div class="icon">
+                <span class="logo">
+                    <a href="https://www.linkedin.com/start/view-full-profile?_ed=0_QQxKmWZxviGG8t8UF-1l5xus9uGIU7Tx1LlbOckGSYpEcRqGDTFUZBRVbL4HnJy_&trk=ndir_viewmore" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 </span>
-            </div> -->
-            <div><img src="img/img2.jpg" alt="Enrica Berti"><h1>Enrica Berti<hr></h1></div>    
+            </div> 
+            <div class="content"><img src="img/img2.jpg" alt="Enrica Berti"><h1>Enrica Berti<hr></h1></div>    
             <div><p>"Ich danke Ihnen für die Unterstützung, um mein Wissen zu erweitern."</p></div>
         </div>
     </section>
